# adm-allo-player

./: .gitignore  CMakeLists.txt  README.md  channelMapping.hpp  mainplayer.cpp  mainplayer.hpp  streamingWAV.md
54ChanPlayer/: DEVELOPER.md  README.md  channelMapping.hpp  mainplayer.cpp
sourceAudio/: .gitkeep
